--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.synthesizer.source.mars">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    
+
     <application
         android:name=".Application"
         android:allowBackup="true"
@@ -11,7 +11,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Mars">
+        android:theme="@style/Theme.Mars"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
