--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+api_key="9BM6KOiKEPz5M9FcUXVC6sl2FWG0yD3uZNyTGkHw"
