--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,9 +55,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
 
     // Hilt
-    implementation "com.google.dagger:hilt-android:2.38.1"
-    kapt "com.google.dagger:hilt-compiler:2.38.1"
-    kapt "com.google.dagger:dagger-android-processor:2.38.1"
+    implementation 'com.google.dagger:hilt-android:2.38.1'
+    kapt 'com.google.dagger:hilt-compiler:2.38.1'
+    kapt 'com.google.dagger:dagger-android-processor:2.38.1'
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -72,7 +72,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
 
     // Paging 3
-    implementation "androidx.paging:paging-runtime-ktx:3.0.1"
+    implementation 'androidx.paging:paging-runtime-ktx:3.0.1'
     
     // Shimmer
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
